remove unnecessary files and rename

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="switch.css"/>
+    <link rel="stylesheet" href="popup.css"/>
   </head>
 
 <body>
@@ -13,7 +13,7 @@
   </div>
   <hr>
   <div>
-    Open about:addons to manage extensions
+    Open <a href="about:addons" target="_blank">about:addons</a> to manage extensions
   </div>
 </body>
 </html>
