cant link about:addons

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,7 +13,7 @@
   </div>
   <hr>
   <div>
-    Open <a href="about:addons" target="_blank">about:addons</a> to manage extensions
+    <span>Open about:addons to manage extensions</span>
   </div>
 </body>
 </html>
