--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,7 +13,7 @@
   </div>
   <hr>
   <div>
-    <span>Open about:addons to manage extensions</span>
+    <span>Right-click the icon you clicked to manage this extension</span>
   </div>
 </body>
 </html>
