(wip) add popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,7 +13,12 @@
   </div>
   <hr>
   <div>
-    <span>Right-click the icon you clicked to manage this extension</span>
+    <span id="enabled">Enabled</span>
+    <label class="switch-container">
+      <input type="checkbox" id="switch">
+      <span class="slider round"></span>
+    </label>
   </div>
+  <script src="toggle.js"></script>
 </body>
 </html>
